# video-editor-api

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml
scripts/: await-service.sh  bootstrap.sh  init-db.sh  migrate-db.sh
src/: main.rs
src/controllers/: authentication.rs
