[package]
name = "video-editor-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = {version = "0.4.31", features = ["serde"]}
diesel = { version = "2.1.4", features = ["postgres", "chrono"]}
dotenvy = "0.15.7"
rocket = { version = "0.5.0-rc.4", features = ["json"]}
